--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
 }
 
 .profileText .imgBx{
+    content: url(./image.jpg);
     position: relative;
     width: 200px;
     height: 200px;
@@ -46,14 +47,14 @@ body{
     overflow: hidden;
 }
 
-.profileText .imgBx img{
+/* .profileText .imgBx img{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 .profileText h2 {
     color: #fff;
@@ -101,6 +102,11 @@ body{
 }
 
 .contactInfo ul li span {
+    color: #fff;
+    font-weight: 300;
+}
+
+.contactInfo ul li span #link{
     color: #fff;
     font-weight: 300;
 }
